# ziggiz-courier-pickup-syslog

./: .codecov.yml  .flake8  .gitignore  .gitmessage  .license_header.txt  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config.toml  config.yaml  config_with_cert_rules.yaml  mypy.ini  pyproject.toml  test_config.yaml  test_partial_transparent_messages.py  tox.ini  unix_config_example.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
.kind/terraform/: main.tf  providers.tf
.kind/terraform/modules/kind_cluster/: main.tf  outputs.tf  variables.tf
.kind/terraform/modules/main/: cert-manager.tf  flux.tf  main.tf  providers.tf  strimzi.tf  variables.tf
.kind/terraform/modules/main/flux2-manifests/: cert-manager-helmrelease.yaml  strimzi-charts-oci-helmrepository.yaml  strimzi-operator-helmrelease.yaml
.kind/terraform/modules/main/helm-values/: flux-operator-values.yaml
docs/: client_certificate_verification.md  json_output.md  udp_fragmentation.md
examples/: DEMO.md  README.md  config_basic.yaml  config_test.yaml  config_tls.yaml  config_tls_with_cert_rules.yaml  config_udp.yaml  config_unix.yaml  config_unix_socket.yaml  demo_config.yaml  send_demo_message.sh  start_demo_server.sh
tests/: conftest.py  test_backend_selection_integration.py  test_config.py  test_console_output_backend.py  test_main.py  test_main_module.py  test_output_backend.py  test_partial_transparent_messages.py  test_protocol_udp.py  test_server.py  test_syslog_kafka_output_backend.py  test_syslog_kafka_output_mixin.py
tests/protocol/: README.md  __init__.py  refactor_protocol_tests.py  test_base_stream_extended.py  test_base_stream_protocol.py  test_cert_verify.py  test_decoder_factory.py  test_decoder_integration.py  test_framing.py  test_framing_integration.py  test_ip_filter.py  test_protocol_tcp.py  test_protocol_tls.py  test_protocol_udp.py  test_protocol_unix.py  test_real_world_framing.py  test_syslog_formats.py  test_tls_cert_verification.py
ziggiz_courier_pickup_syslog/: __init__.py  __main__.py  config.py  kafka_output_backend.py  main.py  server.py  telemetry.py
ziggiz_courier_pickup_syslog/protocol/: __init__.py  base_stream.py  cert_verify.py  decoder_factory.py  framing.py  framing_common.py  ip_filter.py  syslog_kafka_output_mixin.py  syslog_message_processing_mixin.py  tcp.py  tls.py  udp.py  unix.py
